public/stylesheets/styles.css
@font-face
{
    font-family: Blurmix;
    src: url('/public/assets/Blurmix.TTF');
}

body {
    margin: 0;
    padding: 0;
    overflow:hidden;
    background-color:black;
    font-family:Blurmix, sans-serif;
    -moz-user-select: none;
    -webkit-user-select: none;
    -ms-user-select: none;
}

#gestureCapture {
    position:relative;
}
/*
#videoWrapper {
   display:table;
    border:1px dashed blue;
    height: 100%;
    width: 100%;
}
*/

#introVideo {
/*    margin: 0 auto;
    display: table-cell;
    vertical-align:middle;*/
    margin: 0 auto;
    display:none;
/*    vertical-align: middle;
     width:640px;
     height:480px;
     position:absolute;
     top: 10%;
     left:0;
     right:0;
     margin-left:auto;
     margin-right:auto;
     position: absolute;
     width: 60%;
     height: 30%;
     left: 20%;
     top: 35%;*/
}

#preroll {
    position:relative;
    /*width:1200px;
    height:800px;*/
    padding-top:5%;
   /* vertical-align:middle;*/
}

#preroll p {
    text-transform: uppercase;
    color:white;
    text-align:center;
    font-size:35px;
}

#preroll p.appTitle {
    font-size:50px;
}


#preroll .buttons {
/*    position:absolute;
    top:70%;
    left:20%;
*/
    text-align:center;
}

#postroll {
    display:none;
}

